Code checked in 9/24/2016

--- a/tcm/modules/web/src/main/webapp/login.xhtml
+++ b/tcm/modules/web/src/main/webapp/login.xhtml
@@ -53,7 +53,7 @@
                     <div class="Seperator"></div>
                     <div class="EmptyBox10"></div>
                     <p:button  value="Forgot Password ?" styleClass="Fs16 RedButton" href="/forgot.xhtml"></p:button>
-                    <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"></p:button>
+                    <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml?a=Y"></p:button>
                     <div class="EmptyBox50"></div>
                 </h:form>
             </div>
