--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -18,6 +18,7 @@
             <div class="Container45 Responsive100 LeftBlockAcctType Fleft">
                 <div class="Container100 CustomWidthAccountypePanel">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(1)}"
+                                   process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel"  >
                         <p:panel styleClass="Wid95 Fleft MarCenter tcmPanel-UI">
                             <div class="Container70">
@@ -35,6 +36,7 @@
                 </div>
                 <div class="Container100 CustomWidthAccountypePanel">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(2)}"
+                                   process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
@@ -51,6 +53,7 @@
                 </div>
                 <div class="Container100 CustomWidthAccountypePanel">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(3)}"
+                                   process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
@@ -69,6 +72,7 @@
             <div class="Container45 Responsive100 FrightForced RightBlockAcctType">
                 <div class="Container100 CustomWidthAccountypePanel">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(4)}"
+                                   process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
@@ -87,6 +91,7 @@
 
                 <div class="Container100 CustomWidthAccountypePanel">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(5)}"
+                                   process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
@@ -105,6 +110,7 @@
 
                 <div class="Container100 CustomWidthAccountypePanel">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(6)}"
+                                   process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
@@ -123,6 +129,7 @@
 
                 <div class="Container100 CustomWidthAccountypePanel" style="display: none">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(7)}"
+                                   process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
                             <div class="Container70">
