--- a/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	template="/template/common/simple.xhtml">
+	template="/template/common/template.xhtml">
 
 	<ui:define name="content">
 		<div id="layout-portlets-cover">
@@ -25,7 +25,7 @@
 						<div class="EmptyBox10"></div>
 						<div class="ContainerIndent">
 							<h3 class="FsRes14">Your application will be processed by
-								Docusign.You will soon receive an email for reviewing the
+								Docusign.You will soon receive an two emails for reviewing the
 								application and signature.</h3>
 						</div>
 						<div class="ContainerIndent">
