--- a/tcm/modules/web/src/main/webapp/signup.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup.xhtml
@@ -7,6 +7,7 @@
 
 
     <f:metadata>
+        <f:viewParam name="a" value="#{userBean.action}"/>
         <f:viewParam name="l" value="#{userBean.beanLogonID}"/>
         <f:viewParam name="e" value="#{userBean.beanEmail}"/>
         <f:viewParam name="r" value="#{userBean.beanResetID}"/>
