Projection HighChart - Sudhir

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -24,7 +24,6 @@
 				<p:ajax update=":ctoForm:tdaccordian:beneficiaryPanel" />
 			</p:selectBooleanButton>
 
-
 			<div class="Container100 Responsive100">
 				<div class="ContainerIndent">
 					<div class="Container100 MarginBottom">
@@ -50,7 +49,7 @@
 												 process="@this" immediate="true"
 												 icon="fa fa-trash Fs14 white"
 												 update="singleDT"
-												 actionListener="#{tdcto.tdMasterData.deleteBeneficiary(benefiaciary.beneId)}">
+												 actionListener="#{tdcto.tdMasterData.deleteBeneficiary(benefiaciary)}">
 									<p:confirm header="Delete This Account" message="Are you sure?" icon="ui-icon-alert"/>
 								</p:commandButton>
 							</p:column>
@@ -70,7 +69,7 @@
 							<p:column styleClass="Wid25 num-text-align invest"
 									  headerText="Share %" resizable="true">
 								<span class="dashboardUsrColumnFloatRight"><h:outputText
-										value="#{benefiaciary.sharePerc}%">
+										value="#{benefiaciary.sharePerc}">
 								</h:outputText></span>
 
 							</p:column>
@@ -207,8 +206,7 @@ tax or estate planning. Please consult an estate planner for details regarding t
 								<div class="EmptyBox5"></div>
 								<p:inputNumber styleClass="Wid85 CustomWidthFA2 FS14 Mar5"
 											   value="#{tdcto.tdMasterData.tmpBenefiaciaryDetail.sharePerc}"
-											   symbol="%"
-											   symbolPosition="s" emptyValue="zero">
+											   decimalPlaces="0" emptyValue="zero">
 								</p:inputNumber>
 							</div>
 						</div>
