--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -496,14 +496,14 @@
                                     Amount </label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:inputNumber
+                                <pe:inputNumber
                                         styleClass="Wid100 invInputText input_investwid1 amountBRmobileSupport fundingRecurring"
                                         style="text-align: left;"
                                         value="#{tdcto.tdMasterData.electroicBankDetail.tranAmount}"
                                         maxlength="8" symbol="$" decimalPlaces="2" required="false"
                                         requiredMessage="Min. of $50 is required!"
                                         validatorMessage="Min. of $50 is required!">
-                                </p:inputNumber>
+                                </pe:inputNumber>
                             </div>
                             <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                 <label Class="Container100"
