--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -106,14 +106,14 @@
                                         Investment Amount </label>
 
                                     <div class="EmptyBox5"></div>
-                                    <pe:inputNumber
+                                    <p:inputNumber
                                             styleClass="Wid85 invInputText input_investwid1 amountBRmobileSupport fundingRecurring"
                                             style="text-align: left;"
                                             value="#{tdcto.tdMasterData.initialInvestment}" maxlength="11"
                                             symbol="$" decimalPlaces="2" required="false"
                                             requiredMessage="Min. of $50,000 investment is required!"
                                             validatorMessage="Min. of $50,000 investment is required!">
-                                    </pe:inputNumber>
+                                    </p:inputNumber>
                                 </div>
                                 <div class="Container45 Fleft CustomWidthFA2 MarTop5" style="display: none">
                                     <label Class="Container100"
@@ -496,14 +496,14 @@
                                     Amount </label>
 
                                 <div class="EmptyBox5"></div>
-                                <pe:inputNumber
+                                <p:inputNumber
                                         styleClass="Wid100 invInputText input_investwid1 amountBRmobileSupport fundingRecurring"
                                         style="text-align: left;"
                                         value="#{tdcto.tdMasterData.electroicBankDetail.tranAmount}"
                                         maxlength="8" symbol="$" decimalPlaces="2" required="false"
                                         requiredMessage="Min. of $50 is required!"
                                         validatorMessage="Min. of $50 is required!">
-                                </pe:inputNumber>
+                                </p:inputNumber>
                             </div>
                             <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                 <label Class="Container100"
