--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -11,6 +11,12 @@
              style="border: 0px; background: transparent">
         <div class="Container80 Responsive100 MarTop5 MarCenter"
              style="margin-bottom: 15px;">
+            <p:panel rendered="#{tdcto.getErrorMessage(1) != null}"
+                     style="border: 0px; background: transparent"
+                    styleClass="Container100">
+                <h:outputText styleClass="errorText"
+                        value="#{tdcto.getErrorMessage(1)}" escape="false"/>
+            </p:panel>
             <div class="Container100">
                 <label Class="Container60"
                        style="text-align: left !important; font-weight: bold !important;">Name</label>
@@ -44,7 +50,7 @@
                     <p:inputMask styleClass="Wid85 FS14 CustomWidthFA-Responsive"
                                  value="#{tdcto.tdMasterData.acctOwnersDetail.dob}"
                                  maxlength="30"
-                                 mask="99/99/9999" placeholder="MM/DD/YYYY" required="true">
+                                 mask="99/99/9999" placeholder="MM/DD/YYYY" required="false">
                     </p:inputMask>
                 </div>
 
@@ -127,6 +133,12 @@
              style="border: 0px; background: transparent">
         <div class="Container80 Responsive100 MarTop5 MarCenter"
              style="margin-bottom: 15px;">
+            <p:panel rendered="#{tdcto.getErrorMessage(2) != null}"
+                     style="border: 0px; background: transparent"
+                     styleClass="Container100">
+                <h:outputText styleClass="errorText"
+                              value="#{tdcto.getErrorMessage(2)}" escape="false"/>
+            </p:panel>
             <div class="Container100">
                 <label Class="Container60"
                        style="text-align: left !important; font-weight: bold !important;">Name</label>
