--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -7,6 +7,12 @@
 
     <div class="Container80 Responsive100 MarTop5 MarCenter ui-color paddingFA" style="margin-bottom: 15px;">
 
+        <p:panel rendered="#{tdcto.getErrorMessage(0) != null}"
+                 style="border: 0px; background: transparent"
+                 styleClass="Container100">
+            <h:outputText styleClass="errorText"
+                          value="#{tdcto.getErrorMessage(0)}" escape="false"/>
+        </p:panel>
 
         <p:panel id="acctTypePanel"
                  style="border: 0px; background: transparent">
