--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -12,6 +12,14 @@
                 <div class="Container100">
                     <div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
                          style="margin-bottom: 15px; border: 0px; background: transparent">
+
+                        <p:panel rendered="#{tdcto.getErrorMessage(9) != null}"
+                                 style="border: 0px; background: transparent"
+                                 styleClass="Container100">
+                            <h:outputText styleClass="errorText"
+                                          value="#{tdcto.getErrorMessage(9)}" escape="false"/>
+                        </p:panel>
+
                         <div class="Container100 CustomWidthFA2 MarTop5">
                             <p:selectBooleanCheckbox
                                                      styleClass="RegulatoryCheckBox"
@@ -434,6 +442,12 @@
                 <div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
                      style="margin-bottom: 15px; border: 0px; background: transparent">
 
+                    <p:panel rendered="#{tdcto.getErrorMessage(10) != null}"
+                             style="border: 0px; background: transparent"
+                             styleClass="Container100">
+                        <h:outputText styleClass="errorText"
+                                      value="#{tdcto.getErrorMessage(10)}" escape="false"/>
+                    </p:panel>
 
                     <p:panel style="border: 0px; background: transparent"
                              rendered="true">
