--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -36,7 +36,7 @@
                             <p:accordionPanel id="tdaccordian" styleClass="tcmAccordionPanel-UI" activeIndex="#{tdcto.activeTab}">
                                 <p:ajax event="tabChange" listener="#{tdcto.onTabChange}" update=":ctoForm:tdaccordian"
                                         immediate="true" />
-                                <p:tab id="tab0" >
+                                <p:tab id="tab0" styleClass="tcmAccordion-UI">
                                     <f:facet name="title">
                                         <p:graphicImage
                                                 value="/javax.faces.resource/images/acc_type.png.xhtml?ln=tcm"/>
@@ -53,7 +53,7 @@
 
                                     <ui:include src="/pages/custody/td/acctholder.xhtml"/>
                                 </p:tab>
-                                <p:tab id="tab2"  >
+                                <p:tab id="tab2" styleClass="tcmAccordion-UI">
                                     <f:facet name="title">
                                         <p:graphicImage
                                                 value="/javax.faces.resource/images/address.png.xhtml?ln=tcm"/>
@@ -61,7 +61,7 @@
                                     </f:facet>
                                     <ui:include src="/pages/custody/td/address.xhtml"/>
                                 </p:tab>
-                                <p:tab id="tab3" >
+                                <p:tab id="tab3" styleClass="tcmAccordion-UI" >
                                     <f:facet name="title">
                                         <p:graphicImage
                                                 value="/javax.faces.resource/images/citizenship.png.xhtml?ln=tcm"/>
@@ -69,7 +69,7 @@
                                     </f:facet>
                                     <ui:include src="/pages/custody/td/regulatory.xhtml"/>
                                 </p:tab>
-                                <p:tab id="tab4" >
+                                <p:tab id="tab4" styleClass="tcmAccordion-UI" >
                                     <f:facet name="title">
                                         <p:graphicImage
                                                 value="/javax.faces.resource/images/employment.png.xhtml?ln=tcm"/>
@@ -78,7 +78,7 @@
 
                                     <ui:include src="/pages/custody/td/employment.xhtml"/>
                                 </p:tab>
-                                <p:tab id="tab5" >
+                                <p:tab id="tab5" styleClass="tcmAccordion-UI" >
                                     <f:facet name="title">
                                         <p:graphicImage
                                                 value="/javax.faces.resource/images/beneficiary.png.xhtml?ln=tcm"/>
@@ -87,7 +87,7 @@
 
                                     <ui:include src="/pages/custody/td/beneficiary.xhtml"/>
                                 </p:tab>
-                                <p:tab id="tab6">
+                                <p:tab id="tab6" styleClass="tcmAccordion-UI">
                                     <f:facet name="title">
                                         <p:graphicImage
                                                 value="/javax.faces.resource/images/money.png.xhtml?ln=tcm"/>
