--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -11,7 +11,14 @@
 			<div class="Container80 Responsive100 MarTop5 MarCenter"
 				style="margin-bottom: 15px;">
 
-				<label Class="Container100"
+                <p:panel rendered="#{tdcto.getErrorMessage(7) != null}"
+                         style="border: 0px; background: transparent"
+                         styleClass="Container100">
+                    <h:outputText styleClass="errorText"
+                                  value="#{tdcto.getErrorMessage(7)}" escape="false"/>
+                </p:panel>
+
+                <label Class="Container100"
 					style="text-align: left !important; font-weight: bold !important;">
 					Regulatory Questions</label>
 
