--- a/tcm/modules/web/src/main/webapp/message.xhtml
+++ b/tcm/modules/web/src/main/webapp/message.xhtml
@@ -6,46 +6,44 @@
                 template="/template/common/simple.xhtml">
 
     <f:metadata>
-        <f:viewParam name="type" value="#{messageBean.type}"/>
-        <f:viewParam name="title" value="#{messageBean.title}"/>
-        <f:viewParam name="message" value="#{messageBean.message}"/>
-        <f:viewParam name="support" value="#{messageBean.supportInfo}"/>
+        <f:viewParam name="type" value="#{messageBean.type}" />
+        <f:viewParam name="title" value="#{messageBean.title}" />
+        <f:viewParam name="message" value="#{messageBean.message}" />
+        <f:viewParam name="support" value="#{messageBean.supportInfo}" />
     </f:metadata>
 
     <ui:define name="content">
         <h:form>
 
             <div id="layout-portlets-cover">
-                <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                     style="margin-top:5%;">
+                <div class="EmptyBox50"></div>
+                <div
+                        class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
+                        style="margin-top: 5%;">
                     <div class="Container90 Fnone MarAuto TexAlCenter">
-                        <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
-                                        styleClass="Fleft" library="invessence"
-                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
-                        <div class="EmptyBox20"></div>
-                        <div class="Container90">
-                            <h1>
-                            <span style="#{messageBean.titleColor}">
-                            #{messageBean.title}
-                            </span>
-                            </h1>
-                        </div>
-                        <div class="EmptyBox20"></div>
 
-                        <div class="Container90 TexAlLeft">
-                            <h:outputText value="#{messageBean.message}" escape="false"/>
+                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                                        styleClass="Fleft" library="invessence" class="MarAuto MarTop20"
+                                        style="height: 50px" />
+                        <div class="EmptyBox20"></div>
+                        <div class="Container100">
+                            <h3 class="FsRes14" style="">#{messageBean.title}</h3>
+                        </div>
+                        <div class="EmptyBox5"></div>
+
+                        <div class="Container100 TexAlCenter">
+                            <h:outputText styleClass="FsRes14" value="#{messageBean.message}" escape="false" />
                         </div>
                         <div class="EmptyBox20"></div>
-                        <div class="Container90 TexAlLeft">
-                            <h:outputText value="#{messageBean.supportInfo}" escape="false"/>
+                        <div class="Container100 TexAlCenter">
+                            <h:outputText styleClass="FsRes14" value="#{messageBean.supportInfo}" escape="false" />
                         </div>
                     </div>
-                    <div class="Container90 TexAlCenter">
+                    <div class="Container100 TexAlCenter">
                         <p:commandButton value="OK"
-                                         actionListener="#{uiLayout.defaultHome}"/>
+                                         actionListener="#{uiLayout.defaultHome}" />
                     </div>
-                    <div class="EmptyBox20"></div>
+                    <div class="EmptyBox10"></div>
                 </div>
             </div>
         </h:form>
