--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -13,12 +13,12 @@
                 <div class="Container80 Responsive100 MarTop5 MarCenter"
                      style="margin-bottom: 15px;">
 
-                    <p:panel rendered="#{tdcto.getErrorMessage(3) != null}"
-                             style="border: 0px; background: transparent"
-                             styleClass="Container100">
-                        <h:outputText styleClass="errorText"
-                                      value="#{tdcto.getErrorMessage(3)}" escape="false"/>
-                    </p:panel>
+                    <!--<p:panel rendered="#{tdcto.getErrorMessage(3) != null}"-->
+                             <!--style="border: 0px; background: transparent"-->
+                             <!--styleClass="Container100">-->
+                        <!--<h:outputText styleClass="errorText"-->
+                                      <!--value="#{tdcto.getErrorMessage(3)}" escape="false"/>-->
+                    <!--</p:panel>-->
 
                     <div class="Container100">
 
@@ -184,12 +184,12 @@
                 <div class="Container80 Responsive100 MarTop5 MarCenter"
                      style="margin-bottom: 15px;">
 
-                    <p:panel rendered="#{tdcto.getErrorMessage(4) != null}"
-                             style="border: 0px; background: transparent"
-                             styleClass="Container100">
-                        <h:outputText styleClass="errorText"
-                                      value="#{tdcto.getErrorMessage(4)}" escape="false"/>
-                    </p:panel>
+                    <!--<p:panel rendered="#{tdcto.getErrorMessage(4) != null}"-->
+                             <!--style="border: 0px; background: transparent"-->
+                             <!--styleClass="Container100">-->
+                        <!--<h:outputText styleClass="errorText"-->
+                                      <!--value="#{tdcto.getErrorMessage(4)}" escape="false"/>-->
+                    <!--</p:panel>-->
 
                     <p:selectBooleanCheckbox value="#{tdcto.tdMasterData.jointhasDifferent}"
                                              itemLabel="Has different address then primary account holder?">
