--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -18,12 +18,12 @@
 		<div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
 			 style="margin-bottom: 15px;">
 
-        <!--<p:panel rendered="#{tdcto.getErrorMessage(8) != null}"-->
-                 <!--style="border: 0px; background: transparent"-->
-                 <!--styleClass="Container100">-->
-            <!--<h:outputText styleClass="errorText"-->
-                          <!--value="#{tdcto.getErrorMessage(8)}" escape="false"/>-->
-        <!--</p:panel>-->
+        <p:panel rendered="#{tdcto.getErrorMessage(8) != null}"
+                 style="border: 0px; background: transparent"
+                 styleClass="Container100">
+            <h:outputText styleClass="errorText"
+                          value="#{tdcto.getErrorMessage(8)}" escape="false"/>
+        </p:panel>
 
 
         <p:selectBooleanButton styleClass="AddBeneficiaryButton" id="addButton" onLabel="Add Beneficiary"
