--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -12,12 +12,12 @@
         <div class="Container80 Responsive100 MarTop5 MarCenter"
              style="margin-bottom: 15px; margin-top: 10px!important;">
 
-            <!--<p:panel rendered="#{tdcto.getErrorMessage(5) != null}"-->
-                     <!--style="border: 0px; background: transparent"-->
-                     <!--styleClass="Container100">-->
-                <!--<h:outputText styleClass="errorText"-->
-                              <!--value="#{tdcto.getErrorMessage(5)}" escape="false"/>-->
-            <!--</p:panel>-->
+            <p:panel rendered="#{tdcto.getErrorMessage(5) != null}"
+                     style="border: 0px; background: transparent"
+                     styleClass="Container100">
+                <h:outputText styleClass="errorText"
+                              value="#{tdcto.getErrorMessage(5)}" escape="false"/>
+            </p:panel>
 
             <div class="Container100">
                 <div class="Container45 Fleft CustomWidthFA-Responsive">
@@ -193,12 +193,12 @@
         <div class="Container80 Responsive100 MarTop5 MarCenter"
              style="margin-bottom: 15px; margin-top: 10px!important;">
 
-            <!--<p:panel rendered="#{tdcto.getErrorMessage(6) != null}"-->
-                     <!--style="border: 0px; background: transparent"-->
-                     <!--styleClass="Container100">-->
-                <!--<h:outputText styleClass="errorText"-->
-                              <!--value="#{tdcto.getErrorMessage(6)}" escape="false"/>-->
-            <!--</p:panel>-->
+            <p:panel rendered="#{tdcto.getErrorMessage(6) != null}"
+                     style="border: 0px; background: transparent"
+                     styleClass="Container100">
+                <h:outputText styleClass="errorText"
+                              value="#{tdcto.getErrorMessage(6)}" escape="false"/>
+            </p:panel>
 
             <div class="Container100">
                 <div class="Container45 Fleft CustomWidthFA-Responsive">
